# sfml_first_proj

./: CMakeLists.txt
src/: main.cpp  state.hpp  state_machine.cpp  state_machine.hpp
